Updated README with important note.

--- a/README
+++ b/README
@@ -23,3 +23,5 @@ Map fastq files with:
 
 Extract tpm data from .tsv files and merg into one file containing only tpm data:
     'merge_tpm.sh tpm_data/organim_folder'  
+
+NOTE: In current state, directory structure should be set up prior to using the scripts.
